# kylinos-v11-desktop-computer-use

./: AGENT.md  AGENTS.md  CMakeLists.txt  README.md
src/: main.cpp
tests/: draw-star-demo.sh
